Fixed text alignement

--- a/public/style.css
+++ b/public/style.css
@@ -96,7 +96,7 @@ legend {
 }
 #mySVG text {fill: #FFF; font-size: 12px;}
 
-#mySVG text:nth-of-type(1), #mySVG text:nth-of-type(2) {text-anchor: end;}
+#mySVG text:nth-of-type(1), #mySVG text:nth-of-type(3) {text-anchor: end;}
 
 @media screen and (min-width: 800px) {
 	fieldset label {display: inline;}
